codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
assertion_line: 3429
expression: rendered
---
• shell first_token_is_long_
  │ enough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ no output
