codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui/src/history_cell.rs
assertion_line: 3405
expression: rendered
---
• shell echo one
  │ echo two
  └ no output
