codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__user_history_cell_wraps_and_prefixes_each_line_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3542
expression: rendered
---
 USER   live input

│ one two
│ three
│ four five
│ six seven
